--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
             "src\\": "src/",
             "routes\\": "routes/"
         }
+    },
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
     }
 }
