--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "autoload": {
         "psr-4": {
             "src\\": "src/",
-            "routes\\": "routes/"
+            "routes\\": "routes/",
+            "database\\": "database/"
         }
     },
     "require": {
